plugins {
    id 'java'
    id 'war'
    id 'org.springframework.boot' version '3.3.0'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'RaiseTechTask'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(21))
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    runtimeOnly 'org.junit.platform:junit-platform-launcher'
    //以下追加
    implementation 'org.apache.commons:commons-lang3:3.17.0'
    runtimeOnly 'com.mysql:mysql-connector-j'
    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.4'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:3.4.5'
    implementation 'org.springframework.boot:spring-boot-starter-validation:3.4.5'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.8'
    testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.4'
    testImplementation 'com.h2database:h2:2.3.232'

    // JUnit 5 (JUnit Jupiter) を明示的に追加
    testImplementation 'org.junit.jupiter:junit-jupiter-api'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'

    // Mockito JUnit Jupiter を明示的に追加 (MockitoExtension のために必要)
    testImplementation 'org.mockito:mockito-junit-jupiter'

}
tasks.named('test') {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed", "standardOut", "standardError"
        showStandardStreams = true
        exceptionFormat = "full" // 完全なスタックトレースを表示
        showExceptions = true
        showCauses = true
        showStackTraces = true
    }
}
